# raigraphics

./: .gitignore  .travis.yml  CMakeLists.txt  RAI_graphics.hpp  README.md  bitbucket-pipelines.yml  config.hpp.in  install.sh  raiGraphicsConfig.cmake.in  raiGraphicsOpenglConfig.cmake.in  raiGraphicsTest.cpp  raiGraphicsTest2.cpp  raigraphicsConfig.cmake.in  test.cpp
.ci/: build.sh  build_python.sh  deploy_python.sh
.ci/docker/: Dockerfile
bindings/python/: .gitignore  CMakeLists.txt  LICENSE  path.py.in  raigraphics.pyx  raigraphics_test.py  setup.py  singlebody.pxd  test.py
cmake/: Config.cmake.in  raigraphicsConfig.cmake.in
include/rai/common/math/: RAI_math.hpp
include/raiGraphics/: RAI_graphics.hpp
include/raiGraphics/imp/: Light.hpp  camera.h  display.h  glm_fix.h  obj_loader.h  shader.hpp  shader_background.hpp  shader_basic.h  shader_checkerboard.h  shader_flat.h  shader_line.h  shader_menu.h  shader_mouseClick.h  transform.h
res/: basicShader.fs  basicShader.vs  checkerboardShader.fs  checkerboardShader.vs  cubeMapShader.fs  cubeMapShader.vs  flatShader.fs  flatShader.vs  menuShader.fs  menuShader.vs  mouseClickShader.fs  mouseClickShader.vs
src/: RAI_graphics.cpp
src/imp/: camera.cpp  display.cpp  obj_loader.cpp  shader.cpp  shader_background.cpp  shader_basic.cpp  shader_checkerboard.cpp  shader_flat.cpp  shader_line.cpp  shader_menu.cpp  shader_mouseClick.cpp  stb_image.c  texture.cpp  vector3d.cpp
